--- a/reports/modelingData.Rmd
+++ b/reports/modelingData.Rmd
@@ -26,7 +26,7 @@ datlist <- readRDS(here("output","data.rds"))
 types <- read_csv(here('data','types.csv'))
 
 datlist <- datlist %>% 
-  map(~ filter_at(., "plantation forest", all_vars(. < 0.5)) %>% 
+  map(~ filter(., `plantation forest` < 0.5) %>% 
         select(-"plantation forest")
   )
 
